# CoVA

./: .gitignore  .gitmodules  Makefile  README.md
config/blobnet/: amsterdam_b128.txt  amsterdam_b512.txt  archie_b128.txt  archie_b512.txt  jackson_b128.txt  jackson_b512.txt  rialto_b128.txt  shinjuku_b128.txt  shinjuku_b512.txt  taipei_b128.txt  taipei_b512.txt  virat_b128.txt
config/dnn/: yolov4_b2.txt
cova-rs/: .gitignore  Cargo.toml  Makefile
cova-rs/analysis-aggregator/: .gitignore  Cargo.toml
cova-rs/analysis-aggregator/src/: main.rs
cova-rs/analysis-aggregator/src/server/: assoc.rs  dnn.rs  mod.rs  track.rs
cova-rs/bbox/: Cargo.toml
cova-rs/gst-plugins/: Cargo.toml  README.md
cova-rs/gst-plugins/scripts/: debug_bboxcc.sh  debug_bboxsink.sh  debug_cova.sh  debug_metapreprocess.sh  debug_sorttracker.sh  debug_tfrecordsink.sh
cova-rs/gst-plugins/src/: lib.rs
cova-rs/gst-plugins/src/bboxcc/: imp.rs  mod.rs  process.rs
cova-rs/gst-plugins/src/bboxsink/: imp.rs  mod.rs
cova-rs/gst-plugins/src/cova/: imp.rs  mod.rs  tracker.rs
cova-rs/gst-plugins/src/metapreprocess/: imp.rs  mod.rs
cova-rs/gst-plugins/src/sorttracker/: imp.rs  mod.rs  tracker.rs
cova-rs/gst-plugins/src/tfrecordsink/: imp.rs  mod.rs
cova-rs/gst-plugins/src/utils/: file_location.rs  mod.rs
cova-rs/nvdsbbox/: Cargo.toml  nvdsbbox.h
cova-rs/sort/: Cargo.toml
cova-rs/sort/src/: lib.rs  state.rs
cova-rs/sort/src/tracker/: linear_observation_model.rs  mod.rs  motion_model.rs
docker/: Dockerfile  build.sh  install_trt.sh  launch.sh  tf_configure.bazelrc
experiment/cova/: config.yaml  config_single.yaml  launch.py
experiment/naive/: config.yaml  launch.py
gst-plugins/: Makefile
gst-plugins/gst-gopsplit/: Makefile  README  gstgopsplit.cpp  gstgopsplit.h
gst-plugins/gst-maskcopy/: Makefile  README  compile_commands.json  debug_maskcopy.sh  gstmaskcopy.cpp  gstmaskcopy.h
gst-plugins/gst-nvdsbbox/: Makefile  compile_commands.json  debug_nvdsbbox.sh  gstnvdsbbox.cpp  gstnvdsbbox.h
gst-plugins/gst-tcpprobe/: Makefile  compile_commands.json  gsttcpprobe.cpp  gsttcpprobe.h
model/: .gitignore  README.md  tasks.py
parse/: accuracy.py  config.yaml  parse.py
parse/common/: __init__.py  label.py  time.py
pipeline/: README.md  __init__.py
pipeline/common/: pipeline.py
pipeline/cova/: __init__.py  pipeline.py
pipeline/naive/: config.yaml  pipeline.py
pipeline/sort/: __init__.py  pipeline.py
utils/: config.yaml  generate-mog.py  generate-record.sh  train-blobnet.py
utils/data/: balance.py  load.py  (+2 more)
(+10 files in other folders)
