[package]
name = "sort"
version = "0.1.0"
edition = "2018"

[dependencies]
adskalman = "0.13.0"
nalgebra = { version="0.30.1", features=["libm"] }
anyhow = "1.0.42"
log = { version="0.4.14", features = ["release_max_level_off"] }
lapjv = "0.2.0"
linear_assignment = { version="0.0.2", git="https://github.com/saebyn/linear-assignment-rust" }
ordered-float = "2.0"
libc = "0.2.98"
env_logger = "0.9.0"
bbox = { path="../bbox" }
